# cs251simulator

./: .gitignore  Cargo.toml  readme.md
src/: main.rs
src/simulator/: grammar.pest  instruction.rs  memory.rs  mod.rs  registers.rs
src/ui/: instruction.rs  io.rs  memory.rs  mod.rs  picker.rs  registers.rs
src/util/: mod.rs
