[package]
name = "cs251simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.19", features = ["derive"] }
color-eyre = "0.6.3"
pest = "2.7.13"
pest_derive = "2.7.13"
ratatui = "0.28.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tui-textarea = "0.6.1"


